--- a/artistas/templates/artista_create.html
+++ b/artistas/templates/artista_create.html
@@ -2,10 +2,19 @@
 
 {% block content %}
 <div class="container mt-5">
+    {% if messages %}
+        <div>
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} mt-3">
+                    {{ message }}
+                </div>
+            {% endfor %}       
+        </div>
+    {% endif%}
     <h1 class="mb-4 text-center">Cadastrar Artista</h1>
     <div class="card mx-auto" style="max-width: 600px;">
         <div class="card-body">
-            <form method="post">
+            <form class="form-custom" method="post">
                 {% csrf_token %}
                 <div class="mb-3">
                     <label for="id_nome" class="form-label">Nome</label>
