--- a/eventos/templates/evento_list.html
+++ b/eventos/templates/evento_list.html
@@ -7,7 +7,7 @@
                 <h1 class="mb-0">Lista de Eventos</h1>
             </div>
             <div class="card-body">
-                <table class="table table-hover table-bordered">
+                <table class="table table-hover table-bordered table-custom">
                     <thead class="thead-light">
                         <tr>
                             <th>Artista</th>
